k8s/result-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: result-deployment
  namespace: ironhack-project-2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: result-app
  template:
    metadata:
      labels:
        app: result-app
    spec:
       containers:
         - name: result-container
           image: akemloh/result
           ports:
            - containerPort: 80
