k8s/vote-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata: 
  name: vote-deployment
  namespace: ironhack-project-2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: vote-app
  template:
    metadata:
      labels:
        app: vote-app
    spec:
      containers:
        - name: vote-container
          image: akemloh/vote:latest
          ports:
           - containerPort: 80
