k8s/result-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: result-service
  namespace: ironhack-project-2
spec:
  # ClusterIP because we now use Ingress
  # type: LoadBalancer
  selector:
    app: result-app
  ports:
    - port: 80
      targetPort: 80
