k8s/vote-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: vote-service
  namespace: ironhack-project-2
spec:
  # ClusterIP because we now use Ingress
  # type: LoadBalancer
  selector:
    app: vote-app
  ports:
    - port: 8080
      targetPort: 80
